jav 21 enhancements