@@ -280,11 +280,7 @@ public class IMQToOS {
     if (!addProperties(match))
       return false;
 
-    if (match.getMatch() != null) {
-      return false;
-    }
-
-    return true;
+    return match.getMatch() == null;
   }
 
   private boolean addProperties(Match match) throws QueryException {
@@ -368,9 +364,9 @@ public class IMQToOS {
       Match match = where.getMatch();
       for (Where binding : match.getWhere()) {
         if (binding.getIri().equals(SHACL.PATH)) {
-          path = getIriFromAlias(binding.getIs().get(0));
+          path = getIriFromAlias(binding.getIs().getFirst());
         } else if (binding.getIri().equals(SHACL.NODE)) {
-          node = getIriFromAlias(binding.getIs().get(0));
+          node = getIriFromAlias(binding.getIs().getFirst());
         }
       }
       if (path == null || node == null)
@@ -409,7 +405,7 @@ public class IMQToOS {
               addToInstanceFilters(type, argument.getValueIri().getIri(), instanceFilters);
               return;
             } else if (null != argument.getValueIriList()) {
-              argument.getValueIriList().stream().forEach(ttIriRef -> addToInstanceFilters(type, ttIriRef.getIri(), instanceFilters));
+              argument.getValueIriList().forEach(ttIriRef -> addToInstanceFilters(type, ttIriRef.getIri(), instanceFilters));
               return;
             }
           }
